ensure header text does not wrap

--- a/src/styles/components/Layout/Header.module.scss
+++ b/src/styles/components/Layout/Header.module.scss
@@ -15,15 +15,19 @@
   backdrop-filter: blur(1em);
   width: 100%;
   z-index: 100;
-  padding: 1rem;
+  padding: $spacing-5;
   border-bottom: 1px solid $color-outline;
   display: flex;
   flex-direction: row;
   align-items: baseline;
   justify-content: space-between;
+  white-space: nowrap;
+  gap: $spacing-5;
 
   & h5 {
     margin: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 }
 
